# TrueTruth

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.qdrant  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  QUICKSTART.md  README.md  ab_b01_n1.json  ab_grid_6x3.json  d1_baselines_24.json  d1_baselines_6.json  d1_drugsafety_check_5.json  d1_kbclass_check_5.json  d1_kbsafety_check_5.json  d1_render_check_5.json  d1_safetyblock_check_5.json  diag_bcap_reasons.json  docker-compose.dev.yml  docker-compose.yml  measure_full24.json  measure_full24.scored.json  measure_safety_multirun.json  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-web.txt  requirements.txt  run_ab_test.sh  run_test.sh  评价标准.md
hypertension/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
hypertension/config/: pubmed_screen_topics.json  pubmed_screen_topics_nasal.json
hypertension/evidence/: EV-DRUGSAFETY-2019-HYDRALAZINE-001.md  EV-DRUGSAFETY-2019-ISRADIPINE-001.md  EV-DRUGSAFETY-2019-NICARDIPINE-001.md  EV-DRUGSAFETY-2020-QUINAPRIL-001.md  EV-DRUGSAFETY-2021-CANDESARTAN-001.md  EV-DRUGSAFETY-2021-FOSINOPRIL-001.md  EV-DRUGSAFETY-2022-CAPTOPRIL-001.md  EV-DRUGSAFETY-2022-CHLORTHALIDONE-001.md  EV-DRUGSAFETY-2022-CLEVIDIPINE-001.md  EV-DRUGSAFETY-2022-METOPROLOL-001.md  EV-DRUGSAFETY-2022-RAMIPRIL-001.md  EV-DRUGSAFETY-2023-AMILORIDE-001.md  EV-DRUGSAFETY-2023-ENALAPRIL-001.md  EV-DRUGSAFETY-2023-FELODIPINE-001.md  EV-DRUGSAFETY-2023-FUROSEMIDE-001.md  EV-DRUGSAFETY-2023-HYDROCHLOROTHIAZIDE-001.md  EV-DRUGSAFETY-2023-INDAPAMIDE-001.md  EV-DRUGSAFETY-2023-LISINOPRIL-001.md  EV-DRUGSAFETY-2023-PRAZOSIN-001.md  EV-DRUGSAFETY-2023-TERAZOSIN-001.md  EV-DRUGSAFETY-2023-TORSEMIDE-001.md  EV-DRUGSAFETY-2023-TRIAMTERENE-001.md  EV-DRUGSAFETY-2023-VALSARTAN-001.md  EV-DRUGSAFETY-2024-ALISKIREN-001.md  EV-DRUGSAFETY-2024-ATENOLOL-001.md  EV-DRUGSAFETY-2024-AZILSARTAN-001.md  EV-DRUGSAFETY-2024-BISOPROLOL-001.md  EV-DRUGSAFETY-2024-LABETALOL-001.md  EV-DRUGSAFETY-2024-NEBIVOLOL-001.md  EV-DRUGSAFETY-2024-PERINDOPRIL-001.md  EV-DRUGSAFETY-2024-SPIRONOLACTONE-001.md  EV-DRUGSAFETY-2024-TRANDOLAPRIL-001.md  EV-DRUGSAFETY-2024-VERAPAMIL-001.md  EV-DRUGSAFETY-2025-CLONIDINE-001.md  EV-DRUGSAFETY-2025-DILTIAZEM-001.md  EV-DRUGSAFETY-2025-EPLERENONE-001.md  EV-DRUGSAFETY-2025-LOSARTAN-001.md  EV-DRUGSAFETY-2025-METHYLDOPA-001.md  EV-DRUGSAFETY-2025-PROPRANOLOL-001.md  EV-DRUGSAFETY-2025-SACUBITRIL-VALSARTAN-001.md  (+473 more)
hypertension/evidence/_quarantine/: quarantine-20260521T133635Z-000000.md  quarantine-20260521T133917Z-000000.md
hypertension/scripts/: auto_pubmed_screen.py  backfill_grade.py  check_id_uniqueness.py  download_from_audit.py  fetch_drug_safety.py  fix_study_type_pubmed.py  new_evidence.py  pubmed_targeted_ingest.py  render_audit_report.py  validate_evidence.py
hypertension/src/hypertensiondb/: cli.py
hypertension/tests/: conftest.py
hypertension/tests/golden/: queries.jsonl  test_recall.py
hypertension/tests/integration/: test_api_qdrant_integration.py  test_ingest_end_to_end.py  test_pre_commit_hook.py  test_pubmed_ingest_e2e.py  test_qdrant_index.py
hypertension/tests/unit/: test_api_evidence.py  test_api_health.py  test_api_search.py  test_audit_download.py  test_audit_report.py  test_auto_pubmed_screen.py  test_chunker.py  test_cli.py  test_cli_pubmed.py  test_embedder_mock.py  test_embedder_openai.py  test_embedder_zhipu.py  test_env_loader.py  test_filters.py  test_hybrid.py  test_id_gen.py  test_incremental.py  test_ingest_clean.py  test_ingest_cli.py  test_ingest_extractor_llm.py  (+26 more)
(+283 files in other folders)
