[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truetruth"
version = "0.1.0"
description = "Evidence-Based Medicine Clinical Decision Support System — multi-agent 5A pipeline"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["evidence-based medicine", "clinical decision support", "EBM", "PubMed", "GRADE", "LLM", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "langchain==0.1.0",
    "langchain-openai==0.0.5",
    "langgraph==0.0.20",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "torch>=2.0.0",
    "transformers>=4.36.0",
]

[project.scripts]
truetruth = "src.main:main"

[project.urls]
Homepage = "https://github.com/FreedomIntelligence/TrueTruth"
"Bug Tracker" = "https://github.com/FreedomIntelligence/TrueTruth/issues"
