[project]
name = "hypertensiondb"
version = "0.1.0"
description = "Hypertension Evidence RAG Database"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "pypinyin>=0.51",
    "python-frontmatter>=1.1",
    "qdrant-client>=1.9",
    "jieba>=0.42",
    "openai>=1.30",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pymupdf>=1.24",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "pre-commit>=3.7",
    "ruff>=0.4",
    "testcontainers[docker]>=4.0",
    "reportlab>=4.0",
]
bge = [
    "FlagEmbedding>=1.2",
]

[project.scripts]
hdb = "hypertensiondb.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests (may use docker)",
    "golden: golden set regression",
]

[tool.ruff]
line-length = 100
target-version = "py311"
